added tailwind for both client and admin

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
   },
   "editor.formatOnSave": true,
   "editor.defaultFormatter": "esbenp.prettier-vscode",
-  "editor.wordWrap": "on"
+  "editor.wordWrap": "on",
+  "scss.lint.unknownAtRules": "ignore"
 }
