--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "@types/node": "^20.12.12",
     "@types/react": "npm:types-react@19.0.0-rc.0",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.0",
+    "autoprefixer": "^10.4.19",
     "dotenv": "^16.4.5",
     "eslint": "^8",
     "eslint-config-next": "15.0.0-rc.0",
+    "postcss": "^8.4.39",
+    "tailwindcss": "^3.4.6",
     "typescript": "5.5.2"
   },
   "engines": {
